# opentele

./: pyproject.toml
src/: api.py  debug.py  devices.py
src/opentele/: exception.py  utils.py
src/opentele/td/: account.py  auth.py  tdesktop.py
src/opentele/tl/: telethon.py
src/td/: configs.py  mtp.py  storage.py
src/tl/: configs.py
tests/: tdata_test.py
